--- a/index.html
+++ b/index.html
@@ -230,7 +230,6 @@
                 </div>
             </div>
         </section>
-
         <section class="background-main center-column min-height-100">
             <div class="container">
                 <div class="row center">
@@ -738,8 +737,10 @@
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item">
                     <h2 class="accordion-header" id="headingOne">
+                        
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                             2021
+                            <i class="fal fa-chevron-down"></i>
                         </button>
                     </h2>
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
@@ -767,6 +768,7 @@
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             2022
+                            <i class="fal fa-chevron-down"></i>
                         </button>
                     </h2>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
@@ -856,6 +858,7 @@
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             2023
+                            <i class="fal fa-chevron-down"></i>
                         </button>
                     </h2>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -893,6 +896,7 @@
                     <h2 class="accordion-header" id="headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                             TBD
+                            <i class="fal fa-chevron-down"></i>
                         </button>
                     </h2>
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="collapseFour" data-bs-parent="#accordionExample">
@@ -981,7 +985,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="item color-gradient color-main">
                     <div class="carousel__slide carousel__slide-3">
@@ -1003,7 +1006,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="item color-gradient color-main">
                     <div class="carousel__slide carousel__slide-3">
@@ -1026,7 +1028,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="item color-gradient color-main">
                     <div class="carousel__slide carousel__slide-3">
@@ -1049,7 +1050,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="item color-gradient color-main">
                     <div class="carousel__slide carousel__slide-3">
@@ -1074,7 +1074,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
             <div class="side-word">
@@ -1082,6 +1081,86 @@
             </div>
         </div>
     </div>
+    <section class="how background-main center min-height-100 position-relative">
+        <div class="side-word">
+            <img src="./images/how_en.png" alt="">
+        </div>
+        <div class="container">
+            <form action="">
+                <div class="input-container">
+                    <div class="row">
+                        <div class="col center">
+                            <h5>email</h5>
+                        </div>
+                        <div class="col-sm-12 col-md-7">
+                            <input type="email" class="form-control" placeholder="email" aria-label="email">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col center">
+                            <h5>full name</h5>
+                        </div>
+                        <div class="col-sm-12 col-md-7">
+                            <input type="text" class="form-control" placeholder="full name" aria-label="full name">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col center">
+                            <h5>mobile number</h5>
+                        </div>
+                        <div class="col-sm-12 col-md-7">
+                            <input type="tel" class="form-control" placeholder="mobile number with country code " aria-label="mobile number">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col center">
+                            <h5>QUANTITY</h5>
+                        </div>
+                        <div class="col-sm-12 col-md-7">
+                            <input type="text" class="form-control" placeholder="Quantity" aria-label="QUANTITY">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col center">
+                            <h5>YOUR METAMASK WALLET ID</h5>
+                        </div>
+                        <div class="col-sm-12 col-md-7">
+                            <input type="text" class="form-control" placeholder="Your  metamask Wallet ID" aria-label="YOUR METAMASK WALLET ID">
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col center">
+                            <h5>PAYMENT METHOD</h5>
+                        </div>
+                        <div class="col-sm-12 col-md-7">
+                            <select class="form-select" aria-label="cash">
+                                <option selected value="1">cash </option>
+                                <option selected value="1">cash </option>
+                                <option selected value="1">cash </option>
+                                <option selected value="1">cash </option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                        </div>
+                        <div class="col-sm-12 col-md-7">
+                            <span>Need more help ? Chat with us or <a href="">send email.</a></span>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                        </div>
+                        <div class="col-sm-12 col-md-7 d-flex align-items-center justify-content-end">
+                            <input type="reset" class="btn-second large color-main outline-main" value="close">
+                            <input type="submit" class="btn-second large color-white background-main" value="send">
+                            
+                        </div>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </section>
     <div class="who media py-5">
         <div class="container">
             <div class="row">
