--- a/index.html
+++ b/index.html
@@ -735,7 +735,7 @@
         </div>
         <div class="container">
             <div class="accordion" id="accordionExample">
-                <div class="accordion-item">
+                <div class="accordion-item border-white">
                     <h2 class="accordion-header" id="headingOne">
                         
                         <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
@@ -764,7 +764,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item border-white">
                     <h2 class="accordion-header" id="headingTwo">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                             2022
@@ -854,7 +854,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item border-white">
                     <h2 class="accordion-header" id="headingThree">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                             2023
@@ -892,7 +892,7 @@
                         </div>>
                     </div>
                 </div>
-                <div class="accordion-item">
+                <div class="accordion-item border-white">
                     <h2 class="accordion-header" id="headingFour">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
                             TBD
@@ -1264,6 +1264,138 @@
             <img src="images/media.png" class="w-100" alt="">
         </div>
     </div>
+    <section class="when position-relative  min-height-100">
+        <div class="side-word">
+            <img src="images/faq_en.png" alt="">
+        </div>
+        <div class="container">
+            <div class="accordion" id="accordionExample">
+                <div class="accordion-item border-main">
+                    <h2 class="accordion-header" id="headingOne">
+                        <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            COIN VS TOKENS
+                            <i class="fal fa-chevron-down"></i>
+                        </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class="accordion-body__item">
+                                <p>
+                                    Each blockchain can have one coin on it. The blockchain is like an exchange (like the 
+                                    Nasdaq stock exchange) with its coin being the currency of the exchange. Tokens are 
+                                    like stocks that can trade on this exchange. In reality, they are defined in terms of the 
+                                    coin of the exchange. Their trading on the exchange increases the demand on the 
+                                    coin. Tokens can come with dividends or other benefits. Coins are not meant to have 
+                                    any benefits other than their potential appreciatio
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item border-main">
+                    <h2 class="accordion-header" id="headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                            WHY FUTIRA COIN?
+                            <i class="fal fa-chevron-down"></i>
+                        </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class="accordion-body__item">
+                                <p>
+                                    A quick glance at the utilization of mobile telephony around the globe shows that 
+                                    almost half the world and over 57% of Africa does not have internet. This is not 
+                                    getting better through the introduction of the traditional generations of mobile 
+                                    telephones. The reason is simple: the infrastructure is expensive. The main concept 
+                                    of a telephone network is in the presence of a central office that routes the calls or 
+                                    the internet packets. These central offices are expensive; so expensive that should 
+                                    one try to cover all Africa with the current central office technology, one will never 
+                                    recover their investment. This is because of the low density of the population. The 
+                                    solution is to decentralize the central office through blockchain technology for the 
+                                    user data and smaller switches for the routing of the data. The Inovatian Group of 
+                                    Companies (www.inovatian.com) were founded to realize this dream. They have 
+                                    worked diligently since 2015 to reduce the infrastructure cost. They did this through 
+                                    a number of innovations: Using higher 4G towers to reach close to the maximum 
+                                    range of the 4G standard (around 30km). Using mesh Wi-Fi to cover the gaps 
+                                    resulting from the high towers as well as for the denser population areas. Using 
+                                    blockchain to control the authentication and authorization of users
+
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item border-main">
+                    <h2 class="accordion-header" id="headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                            TOKEN / COIN SUPPLY
+                            <i class="fal fa-chevron-down"></i>
+                        </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class="accordion-body__item">
+                                <p>
+                                    The total supply of Futira tokens and coins is 20,000,000,000 (twenty billion). The 
+                                    token contract had ten billion out of these 20 billion. The amount given to the 
+                                    founders will not increase over the two billion given to them from the token supply
+                                </p>
+                            </div>
+                            
+                        </div>>
+                    </div>
+                </div>
+                <div class="accordion-item border-main">
+                    <h2 class="accordion-header" id="headingFour">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+                            COIN DISTRIBUTION
+                            <i class="fal fa-chevron-down"></i>
+                        </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="collapseFour" data-bs-parent="#accordionExample">
+                        <div class="accordion-body">
+                            <div class="accordion-body__item">
+                                <strong>Inovatian:</strong>
+                                <div class="accordion-body__item__slide">
+                                    <span>1 Billion Futira Coin.</span>
+                                </div>
+                            </div>
+                            <div class="accordion-body__item">
+                                <strong>Initial Investors::</strong>
+                                <div class="accordion-body__item__slide">
+                                    <span>1 Billion Futira Coin.</span>
+                                </div>
+                            </div>
+                            <div class="accordion-body__item">
+                                <strong>Sold to the public:</strong>
+                                <div class="accordion-body__item__slide">
+                                    <span>1 Billion Futira Coin.</span>
+                                </div>
+                            </div>
+                            <div class="accordion-body__item">
+                                <strong>Coins Available to the Public at Launch:</strong>
+                                <div class="accordion-body__item__slide">
+                                    <span>10 Billion Futira Coin.</span>
+                                </div>
+                            </div>
+                            <div class="accordion-body__item">
+                                <strong>Total number of Coins authorized to be issued in the future to support networks:</strong>
+                                <div class="accordion-body__item__slide">
+                                    <span>20,000,000,000 (twenty billion Futira Coin)</span>
+                                </div>
+                            </div>
+                            <div class="accordion-body__item">
+                                <strong>Lowest fraction of a Futira Coin authorized upon launch:</strong>
+                                <div class="accordion-body__item__slide">
+                                    <span>0.000001 Futira Coin</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="js/pro.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
