--- a/index.html
+++ b/index.html
@@ -151,21 +151,26 @@
             </div>
         </div>
     </div>
-    <section class="what section">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 col-md-7 center-column">
-                    <h3 class="section__title start" style="font-weight:300 ;">FUTIRA COIN</h3>
-                    <div class="section__text p-24 mb-3">
-                        <p>More than half the world does not have access to the internet. This is positively correlated with economic growth and has established the digital divide where some people  are connected and others are not.</p>
-                    </div>
-                    <button class="btn-main large start" id="show-modal-what " data-bs-toggle="modal" data-bs-target="#what-modal"> learn more</button>
+    <section class="what section ">
+        <section class="position-relative" >
+            <div class="container ">
+                <div class="side-word">
+                    <img src="./images/what_main_en.png" alt="">
                 </div>
-                <div class="col-sm-12 col-md-5 center">
-                    <img src="./images/Futira.gif" alt="" class="img-fluid">
+                <div class="row">
+                    <div class="col-sm-12 col-md-7 center-column">
+                        <h3 class="section__title start" style="font-weight:300 ;">FUTIRA COIN</h3>
+                        <div class="section__text p-24 mb-3">
+                            <p>More than half the world does not have access to the internet. This is positively correlated with economic growth and has established the digital divide where some people  are connected and others are not.</p>
+                        </div>
+                        <button class="btn-main large start" id="show-modal-what " data-bs-toggle="modal" data-bs-target="#what-modal"> learn more</button>
+                    </div>
+                    <div class="col-sm-12 col-md-5 center">
+                        <img src="./images/Futira.gif" alt="" class="img-fluid">
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
         <div class="container">
             <div class=" section modal overlay-main fade p-5" id="what-modal" tabindex="-1"  aria-labelledby="modal-title" aria-hidden="true">
                 <div class="modal-dialog what__modal modal-dialog-centered modal-xl">
@@ -190,7 +195,10 @@
                 </div>
             </div>
         </div>
-        <section class="what__grad-top center">
+        <section class="what__grad-top center position-relative">
+            <div class="side-word">
+                <img src="./images/what_main_en.png" alt="">
+            </div>
             <div class="container ">
                 <div class="row border-left-right">
                     <div class="col-sm-12  col-md-6 center-column what__grad-top__col " data-img="#asset-10" data-text="#text-1" data-class="img-yellow-12"data-to="#to-1">
@@ -230,7 +238,10 @@
                 </div>
             </div>
         </section>
-        <section class="background-main center-column min-height-100">
+        <section class="background-main center-column  position-relative min-height-100">
+            <div class="side-word">
+                <img src="./images/what_white_en.png" alt="">
+            </div>
             <div class="container">
                 <div class="row center">
                     <div class="col-sm-12 col-md-7 center-column">
@@ -339,7 +350,10 @@
                 </div>
             </div>
         </section>
-        <section class="what__cards min-height-100 center">
+        <section class="what__cards min-height-100 center position-relative">
+            <div class="side-word">
+                <img src="./images/what_main_en.png" alt="">
+            </div>
                 <div class="container">
                     <div class="row ">
                         <div class="col-sm-12 col-md-4">
