--- a/index.html
+++ b/index.html
@@ -162,8 +162,13 @@
                         <h3 class="section__title start" style="font-weight:300 ;">FUTIRA COIN</h3>
                         <div class="section__text p-24 mb-3">
                             <p>More than half the world does not have access to the internet. This is positively correlated with economic growth and has established the digital divide where some people  are connected and others are not.</p>
+                            <a href="" class=" color-min" style="color: var(--main); font-size: 24px; text-transform: uppercase;"> learn more  <i class="fal fa-angle-right ml-1" style="font-size: 24px;"></i></a>
                         </div>
-                        <button class="btn-main large start" id="show-modal-what " data-bs-toggle="modal" data-bs-target="#what-modal"> learn more</button>
+                        <div class="d-flex align-self-start mt-2">
+                            <button class="btn-main large me-2" id="show-modal-what " data-bs-toggle="modal" data-bs-target="#what-modal"> LEGAL OPINION</button>
+                            <button class="btn-second color-white background-main border-50 large " id="show-modal-what " data-bs-toggle="modal" data-bs-target="#what-modal"> WHITE PAPER</button>
+                        </div>
+                        
                     </div>
                     <div class="col-sm-12 col-md-5 center">
                         <img src="./images/Futira.gif" alt="" class="img-fluid">
@@ -516,7 +521,6 @@
                     </div>
                 </div>
         </section>
-        
     </section>
     <div class="who py-4">
         <div class="container">
