--- a/index.html
+++ b/index.html
@@ -1099,7 +1099,7 @@
             </div>
         </div>
     </div>
-    <section class="how background-main center min-height-100 position-relative">
+    <section class="how background-main center min-height-100 position-relative py-5">
         <div class="side-word">
             <img src="./images/how_en.png" alt="">
         </div>
@@ -1411,6 +1411,85 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="container">
+            <div class="row py-5">
+                <div class="col-md-6 col-xs-12 px-5">
+                    <div class="">
+                        <h5 class="title">FUTIRA</h5>
+                        <ul class="nav quick-link">
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">WHAT</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">WHERE</a>
+                            </li>
+                            <li class="nav-item">
+                              <a class="nav-link" href="#">WHY</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">MEDIA</a>
+                              </li>
+                        </ul>
+                        <ul class="nav quick-link">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">WHO</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">WHEN</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">HOW</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">FAQ</a>
+                                </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-6 col-xs-12 px-5">
+                    <div class="Subscribe">
+                        <form class="row g-3">
+                            <div class="col-auto w-25 mt-4">
+                              <h5 class="subtit mt-1 mb-0">SUBSCRIBE</h5>
+                            </div>
+                            <div class="col-auto w-50">
+                              <input type="text" class="form-control input-subscribe" id="inputtext2" placeholder="Your email address">
+                              <p class="mt-2">Subscribe to our newsletter today to receive updates on the
+                                latest news about Futira Coin</p>
+                            </div>
+                            <div class="col-auto">
+                              <button type="submit" class="btn btn-primary send">SEND</button>
+                            </div>
+                          </form>
+                          <div class="mt-5 d-flex align-items-center justify-content-between">
+                            <h5 class="subtit mb-0">OUR BRAND</h5>
+                            <button type="submit" class="btn btn-primary w-75 download">DOWNLOAD BRAND ASSETS</button>
+                        </div>
+                        <div class="mt-5 d-flex align-items-center justify-content-between">
+                            <h5 class="subtit mb-0">OUR CLAN</h5>
+                            <nav class="nav social-icon">
+                                <a class="nav-link px-3" href="#"><i class="fab fa-youtube"></i></a>
+                                <a class="nav-link px-3" href="#"><i class="fab fa-instagram"></i></a>
+                                <a class="nav-link px-3" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="nav-link px-3" href="#"><i class="fab fa-facebook"></i></a>
+                                <a class="nav-link px-3" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="nav-link px-3" href="#"><i class="fab fa-discord"></i></a>
+                                <a class="nav-link px-3" href="#"><i class="fab fa-telegram-plane"></i></a>
+                            </nav>
+                        </div>
+                    </div>
+                    
+                </div>
+            </div>
+            <div class="copy-right">
+                <p class="mb-0 py-4">2022 © All rights reserved by 
+                    <a href=""><img src="images/logo-2.png" width="100" alt=""></a>
+                </p>
             </div>
         </div>
     </section>
