fixed position img and size

--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
             </div>
         </div>
     </div>
-    <section class="what section ">
+    <section class="what section">
         <section >
             <!-- <div class="side-word">
                 <img src="./images/what_main_en.png" alt="">
             </div> -->
-            <div class="container has-word-1 " data-word="what">
+            <div class="container  " data-word="what">
                 <div class="word word-main d-none" >what</div>
                 <div class="row ">
                     <div class="col-sm-12 col-md-7 mb-4 center-column">
@@ -201,8 +201,8 @@
                 </div>
             </div>
         </div>
-        <section class="what__grad-top center has-word-1">
-            <div class="container has-word-1">
+        <section class="what__grad-top center">
+            <div class="container">
                 <div class="word word-main d-none" >what</div>
                 <div class="row border-left-right">
                     <div class="col-sm-12  mb-4 col-md-6 center-column what__grad-top__col " data-img="#asset-10" data-text="#text-1" data-class="img-yellow-12"data-to="#to-1">
@@ -240,11 +240,12 @@
                         </div>
                     </div>
                 </div>
+                
             </div>
         </section>
-        <section class="background-main center-column  min-height-100">
-            <div class="container has-word-1">
-                <div class="word word-white" >what</div>
+        <section class="background-main center-column has-word-1 min-height-100">
+            <div class="container ">
+                <!-- <div class="word word-white" >what</div> -->
                 <div class="row center">
                     <div class="col-sm-12 col-md-7 mb-4 center-column">
                         <h3 class="section__title start color-white" style="font-weight:300 ;">FUTIRA COIN</h3>
@@ -257,6 +258,9 @@
                         <img src="./images/Asset 14.png" alt="" class="img-fluid">
                     </div>
                 </div>
+            </div>
+            <div class="img-decoration">
+                <img src="images/what-lg.svg" alt="">
             </div>
             <div class=" section modal overlay-main fade p-5" id="what-modal-2" tabindex="-1"  aria-labelledby="modal-title" aria-hidden="true">
                 <div class="modal-dialog what__modal modal-dialog-centered modal-xl">
@@ -516,10 +520,11 @@
                     </div>
                 </div>
         </section>
+        
     </section>
-    <div class="who py-4">
-        <div class="container has-word-1">
-            <div class="word word-main d-none" >who</div>
+    <div class="who py-4 has-word-1">
+        <div class="container ">
+            <!-- <div class="word word-main d-none" >who</div> -->
             <div class="row">
                 <div class="col-md-6  col-xs-12">
                     <a href="#" data-bs-toggle="modal" data-bs-target="#who-modal">
@@ -602,6 +607,9 @@
                 </div>
             </div>
         </div>
+        <div class="img-decoration">
+            <img src="images/who-lg.svg" alt="">
+        </div>
         <div class="section modal who-modal fade p-5" id="who-modal" tabindex="-1" aria-labelledby="modal-title"
             aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered what__modal modal-dialog-centered modal-xl">
@@ -644,9 +652,9 @@
             </div>
         </div>
     </div>
-    <section class="where  background-main-dark">
-        <div class="container has-word-1 d-flex justify-content-between flex-column min-height-100 ">
-            <div class="word word-white" >where</div>
+    <section class="where has-word-1 background-main-dark">
+        <div class="container d-flex justify-content-between flex-column min-height-100 ">
+            <!-- <div class="word word-white" >where</div> -->
             <div class="row p-3">
                 <div class="col-sm-12 col-md-5 where__num">
                     <span class="">57%</span>
@@ -666,6 +674,9 @@
                 </p>
                 <button class="btn-main large" data-bs-toggle="modal" data-bs-target="#where-modal"> learn more</button>
             </div>
+        </div>
+        <div class="img-decoration">
+            <img src="images/where-lg.svg" alt="">
         </div>
         <div class="section modal overlay-main where-modal fade p-5" id="where-modal" tabindex="-1" aria-labelledby="modal-title"
         aria-hidden="true">
@@ -738,9 +749,9 @@
         </div>
     </div>
     </section>
-    <section class="when  background-main min-height-100">
-        <div class="container has-word-1">
-            <div class="word word-white" >when</div>
+    <section class="when has-word-1 background-main min-height-100">
+        <div class="container ">
+            <!-- <div class="word word-white" >when</div> -->
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item border-white">
                     <h2 class="accordion-header" id="headingOne">
@@ -965,9 +976,12 @@
                 </div>
             </div>
         </div>
+        <div class="img-decoration">
+            <img src="images/when-white-lg.svg" alt="">
+        </div>
     </section>
     <div class="why py-5 has-word-1">
-        <div class="word word-white" >why</div>
+        <!-- <div class="word word-white" >why</div> -->
         <div class="container ">
             <h4 class="text-center">WHY INVEST WITH US</h4>
             <div class="owl-carousel carousel pt-5">
@@ -1085,10 +1099,13 @@
                 </div>
             </div>
         </div>
+        <div class="img-decoration">
+            <img src="images/why-lg.svg" alt="">
+        </div>
     </div>
-    <section class="how background-main center min-height-100 position-relative py-5">
-        <div class="container has-word-1">
-            <div class="word word-white" >how</div>
+    <section class="how background-main has-word-1 center min-height-100 position-relative py-5">
+        <div class="container">
+            <!-- <div class="word word-white" >how</div> -->
             <form action="">
                 <div class="input-container">
                     <div class="row">
@@ -1162,9 +1179,12 @@
                     </div>
                 </div>
             </form>
+            <div class="img-decoration">
+                <img src="images/How-lg.svg" alt="">
+            </div>
         </div>
     </section>
-    <div class="who media py-5">
+    <div class="who media has-word-1 py-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-xs-12">
@@ -1262,9 +1282,12 @@
                     </a>
                 </div>
             </div>
+            <div class="img-decoration">
+                <img src="images/media-lg.svg" alt="">
+            </div>
         </div>
     </div>
-    <section class="when position-relative  min-height-100">
+    <section class="when position-relative has-word-1 min-height-100">
         <div class="container">
             <div class="accordion" id="accordionExample">
                 <div class="accordion-item border-main">
@@ -1392,12 +1415,15 @@
                 </div>
             </div>
         </div>
+        <div class="img-decoration">
+            <img src="images/when-lg.svg" alt="">
+        </div>
     </section>
 
     <section class="footer">
         <div class="container">
             <div class="row py-5">
-                <div class="col-md-6 col-xs-12 px-5">
+                <div class="col-lg-6 col-xs-12 px-5 mt-3">
                     <div class="">
                         <h5 class="title">FUTIRA</h5>
                         <ul class="nav quick-link">
@@ -1430,7 +1456,7 @@
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-6 col-xs-12 px-5">
+                <div class="col-lg-6 col-xs-12 px-5 mt-3">
                     <div class="Subscribe">
                         <form class="row g-3">
                             <div class="col-auto w-25 mt-4">
