add section trying

--- a/index.html
+++ b/index.html
@@ -1423,6 +1423,20 @@
             <img src="images/when-lg.svg" alt="">
         </div>
     </section>
+    
+    <section class="trying">
+        <div class="container">
+            <h3 class="">
+                You are Trying To
+                <br />
+                Open Our Website
+                <br />
+                From Unsupported
+                <br />
+                Country. Sorry!
+            </h3>
+        </div>
+    </section>
 
     <section class="footer">
         <div class="container">
@@ -1502,6 +1516,7 @@
             </div>
         </div>
     </section>
+
     <script src="js/pro.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="vendor/jquery/jquery.min.js"></script>
